--- a/assets/chapter7.tex
+++ b/assets/chapter7.tex
@@ -141,7 +141,7 @@ La figura~\ref{fig:hibrida-flexible} muestra la posición de mercado de la situa
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/hibrida-prioridad.png}
-  \caption[Programa de la topología híbrida con prioridad de carga de generación.]{ma de la topología híbrida con prioridad de carga de generación, en donde la batería no puede cargar hasta agotar el recurso de generación. Se observa como, aunque la batería quiera cargar de la red por la existencia de precios negativos beneficiosos, no es capaz de hacerlo.}%
+  \caption[Programa de la topología híbrida con prioridad de carga de generación.]{Programa de la topología híbrida con prioridad de carga de generación, en donde la batería no puede cargar hasta agotar el recurso de generación. Se observa como, aunque la batería quiera cargar de la red por la existencia de precios negativos beneficiosos, no es capaz de hacerlo.}%
   \label{fig:hibrida-prioridad}
 \end{figure}
 
